Update InterceptorClient.java